json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,59 @@
 {
  "items": [
   {
+    "id": "53abYWYmTPS5RzcAGQxgKA",
+    "url": "https://news.ycombinator.com/item?id=21420197",
+    "title": "Doist | Senior iOS Developer | Swift | World | Full-time | Remote: https://doist.com/jobs/ ...",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=20, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=14, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Nov 1, 2019 4:59:19 PM",
+    "validThrough": "Nov 8, 2019 4:59:19 PM",
+    "crawled": "Nov 1, 2019 5:07:21 PM",
+    "content": "Doist | Senior iOS Developer | Swift | World | Full-time | Remote: <a href='https://doist.com/jobs/#senior-ios-developer' rel='nofollow'>https://doist.com/jobs/#senior-ios-developer</a><p>At Doist, our mission is to inspire the workplace of the future by creating simple yet powerful productivity tools (like Todoist and Twist) that promote a calmer, more balanced, more fulfilling way to work and live.</p><p>We envision a future in which people can work without distractions from anywhere in the world on things that they are passionate about and then unplug at the end of the day with the reassuring peace-of-mind that their tasks and teamwork are accounted for.</p><p>These are all remote positions, so you'll be free to work from wherever you please and on a schedule that works best for you.</p><p>To learn more about who we are and how we work, please check out our Ambition &amp; Balance blog: <a href='https://doist.com/blog' rel='nofollow'>https://doist.com/blog</a></p><p>For questions, feel free to reach out at andrew.g@doist.com.</p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Cr8t3HmKR2m7sQ8It0-mfA",
     "url": "https://stackoverflow.com/jobs/191013/senior-ios-developer-remote-x-team?a=123I0AJCa2iI&so_medium=Talent&so_source=TalentApi",
     "title": "Senior iOS Developer (Remote) at X-Team  ",
