json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,68 @@
 {
  "items": [
   {
+    "id": "5WuOG8iQSPCQ4lLyHoBX7A",
+    "url": "https://jobmote.com/job/100061/digital-a11y-expert-us-based-remote-freelance/",
+    "title": "Digital A11y Expert (US-based, remote, freelance)",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``5N( cultur, 2N(remot, OR(work,worker)) )",
+      "DBG_TECH1:k/t/w:android/java/2",
+      "DBG_TECH1:k/t/w:android/mobile/4",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=10, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=10, java=2, gamedev=0, php=0, embedded=0, frontend=4}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TECH1/dotnet",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote"
+    ],
+    "tagsNames2": [
+      "apple",
+      "dotnet",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Applause",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Nov 9, 2019 8:07:48 PM",
+    "validThrough": "Nov 12, 2019 8:07:48 PM",
+    "crawled": "Nov 10, 2019 2:06:29 AM",
+    "content": "<div><p><strong>Summary</strong></p><p>Are you passionate about ensuring websites and applications are readily accessible to end-users utilizing assistive technologies? Are you deeply knowledgeable about the guidelines defined by 2.1, Section 508 and other accessibility standards? If you're a strong communicator with a capacity to lead or train others on accessibility including Developers, QA Engineers and existing Community Accessibility Auditors this might be the perfect role for you!</p><p><br></p><p>For immediate consideration, please complete the this survey:</p><p><strong></strong></p><p><br></p><p><strong>Responsibilities</strong></p><ul><li>Apply accessibility knowledge to a wide range of the client digital properties including but not limited to responsive websites, mobile applications, hybrids and digital documents.</li><li>Bring a depth of development and technical knowledge that complements and strengthens an already dynamic, seasoned group of accessibility professionals</li><li>Mentor, coach and oversee the work of the existing accessibility auditors team</li><li>Meet client engineering staff to understand requirements, deliverables and timelines</li><li>Attend relevant stand-ups and status meetings</li><li>Take responsibility for audits including scoping, planning, budgeting, staffing, execution to final reporting and delivery to the client.</li><li>Prepare design reviews and VPATs</li><li>Support sales to promote accessibility in sales meetings</li><li>Provide training for clients on various technical levels</li></ul><p><br></p><p><strong>Qualifications</strong></p><ul><li>Bachelor's degree in Computer Science, Engineering or other technical field</li><li>3+ years experience in Software Development, QA Engineering and/or performing Accessibility Audits</li><li>Extensive experience using all common screen readers (JAWS, NVDA, mac/iOS VoiceOver, TalkBack) and other assistive technology</li><li>Extensive knowledge of accessibility standards: WCAG 2.0/2.1, ADA Section 508</li><li>Extensive knowledge of WAI-ARIA and accepted accessibility patterns and best practices</li><li>Good knowledge of HTML, CSS, and JavaScript</li><li>Ability to take on an end-user perspective</li><li>Ability to analyze code and employ problem-solving skills to recommend the best solution</li><li>Ability to train, coach colleagues and clients on various accessibility topics</li><li>Ability to communicate to a wide range of project stakeholders (e. g. Executives, Managers, Designers, Developers, etc)</li><li>Knowledge of mobile accessibility best practices on Android and iOS</li><li>Availability of relevant platforms/devices, i.e. Windows, Mac, Android and iOS</li><li>Knowledge of Jira, Slack and other cooperation tools</li><li>Ability to work in remote/cross-language/cross-cultural teams</li></ul></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "DeYi0VkmRsGKzUpn_5lpfw",
     "url": "https://landing.jobs/at/devexperts/ios-developer-in-munich-2019?utm_campaign=landing+rss&utm_content=iOS+Developer&utm_medium=referral&utm_source=rss",
     "title": "iOS Developer",
@@ -279,6 +341,70 @@
     "validThrough": "Oct 15, 2019 10:45:13 AM",
     "crawled": "Oct 21, 2019 10:34:06 PM",
     "content": "<div><h3>Senior iOS Engineer (Productivity Team)</h3></div><div>Company: Adevinta</div><div>Location: </div><div>Requires Work Permit</div>Level: Senior<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Bash </li><li>Git </li><li>iOS </li><li>Python </li><li>Ruby </li><h3>Intro</h3><p></p><p>We are a global digital player, the biggest marketplace specialist in Europe. But we are still a family of local brands – because we believe all great marketplaces are local. Our marketplaces serve people where they live, acknowledging what’s special about every culture and every place, helping local economies to grow sustainably.</p><p><span><span></span></span></p><p></p><p>Our systems are global-scale deployments of different services such as developer productivity tools, image and message processing systems, active and passive security scanning, big data and mapreduce clusters, messaging brokers, database and NoSQL Back-ends and many more. We specifically have to support hundreds of services and hundreds of instances for our millions of consumers, using service discovery systems, auto-scaling, dynamic load balancing and routing.<br><br>Scientists and engineers in our teams work to make hundreds of millions of user behaviour events from all around the world understandable for analysts and business users in the company, daily. This large data set is also one of the most diverse data sets in the world and we work with the latest data technologies (Spark, AWS services, Kafka). Tens of thousands of tasks are run every day to handle data processing jobs at this scale.</p><p>As a&nbsp;<strong>Senior iOS Engineer</strong>&nbsp; you will:&nbsp;</p><ul><ul><li>Be responsible for Adevinta’s global iOS CI/CD tooling and services, identifying gaps and developing improvements to its components as necessary</li><li>Represent the interests of the mobile community in front of Platform Services owners and teams. Acting as a stakeholder for mobile inside Platform Services and making sure its portfolio aligns to the interests of the mobile community across Adevinta</li><li>Promote Platform Services tools within Adevinta marketplaces helping them understand and leverage our global tool offering</li><li>Have a strong awareness and involvement in the mobile development community in Adevinta. Expected to reach out to mobile teams and engineers to understand their point of view, environment and needs and seeking opportunities for promotion of local tools into the Platform Services offering</li><li>Seek opportunities to temporarily join any marketplace team when this would help to directly address mobile development needs/issues</li><li>Be responsible for the long term development of technologies within the mobile domain</li></ul></ul><p></p><h4>Main requirements</h4><ul><li>Experience in iOS development and build pipeline</li><li>Good knowledge of Python, Ruby or bash scripting</li><li>Strong troubleshooting and problem-solving skills</li><li>Proactive attitude to help and support developers across the company</li><li>Strong understanding of iOS development workflows, CI, CD and modern development tools like Git, Travis, Fastlane</li><li>Good level of English (working language)</li><li>Comfortable working with multiple stakeholders and distributed teams</li></ul><p></p><h4>Perks</h4><p></p><ul><li>Choose your Kit (Computer &amp; Phone) ,,</li><li>Flexible work schedule &amp; ability to WFH a couple of days a week&nbsp;</li><li>Private Medical Insurance (including in-office Doctor)</li><li>Gym Membership (70% discount) &amp; Physiotherapist in-office (50% discount)</li><li>Travel Insurance</li><li>Flex Benefits (Ticket Restaurant, Transport Ticket etc.)</li><li>Company &amp; Personal Performance Bonus</li><li>Social activities (meetups, talks hosted in the office &amp; parties)&nbsp;</li><li>Free breakfast, fresh fruit &amp; coffee &amp; canteen in the office</li><li>Able to go to conferences &amp; courses&nbsp;</li><li>Free Language Lessons</li><li>Adjustable desks, chairs &amp; various work spaces</li></ul><p></p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "hE-pb791TZ20CkTSBNn0aQ",
+    "url": "https://www.42jobs.io/react/jobs/8321-react-native-developer",
+    "title": "React Native Developer",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:ant/java/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:reactjs/frontend/24",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:twitter-bootstrap/frontend/8",
+      "DBG_TECH1:k/t/w:typescript/frontend/1",
+      "DBG_TECH1:k/t/w:typescript/nodejs/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=16, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=35, java=9, gamedev=8, php=0, embedded=0, frontend=33}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/frontend",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Springboard Retail",
+      "sameAs": "https://www.springboardretail.com/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 15, 2019 6:58:41 AM",
+    "validThrough": "Oct 22, 2019 6:58:41 AM",
+    "crawled": "Oct 21, 2019 10:33:58 PM",
+    "content": "<h3>React Native Developer</h3><div><p></p><p>Springboard Retail is the leading point of sale and retail management software, designed specifically to empower brands and retailers to harness their data and sell more profitably.&nbsp;</p><p>Springboard Retail is looking for a Native Application Developer to join our team. In this role, you will be responsible for the sophisticated design and consistent performance of our applications. You will work to maintain current functionality while also ensuring that we continually ship new features that achieve high utilization and user satisfaction. Given our requirements, it’s critical that you ensure that we integrate reliably with a variety of hardware and 3rd party software services. You will be working alongside other engineers and developers on different layers of the infrastructure. Therefore, a commitment to collaborative problem solving, sophisticated design, and the creation of quality products is essential. You are excited by the challenge of rapidly delivering improvements to delight our customers and help their businesses thrive while at the same time maintaining the rock-solid stability required by a mission-critical system.</p><p><strong>Springboard Retail is a fully distributed team so this is a remote position</strong>. All of our processes are designed with a remote-first mindset.</p><p>RESPONSIBILITIES -&nbsp;</p><ul><li>Design and build applications for iOS, Android, and web platforms using React Native &amp; TypeScript</li><li>Ensure the performance and quality of applications</li><li>Collaborate with a team to define, design, and ship new features</li><li>Identify and correct bottlenecks and fix bugs</li><li>Help maintain code quality, organization, and automation</li><li>Develop integrations using third-party SDKs and APIs, including hardware&nbsp;</li><li>Supports the diagnosis of customer issues and resolution.</li><li>Become a Springboard Retail product expert</li></ul><p>REQUIREMENTS -&nbsp;</p><ul><li>3+ years of professional native application development experience.</li><li>Proficiency with Swift and Cocoa Touch</li><li>Experience with iOS frameworks such as Core Data, Core Animation, etc.</li><li>Experience with offline storage, threading, and performance tuning</li><li>Familiarity with REST APIs to connect iOS applications to backend services</li><li>Knowledge of UI design patterns and familiarity with UI frameworks like Bootstrap, Ant, Semantic-UI or Material</li><li>Understanding of Apple’s design principles and interface guidelines</li><li>Knowledge of low-level C-based libraries is preferred</li><li>Proficient understanding of code versioning tools such as Git</li><li>Familiarity with continuous integration</li><li>Working knowledge of the general mobile landscape, architectures, trends, and emerging technologies</li><li>Solid understanding of the full mobile development life cycle</li></ul><p>BENEFITS -&nbsp;</p><ul><li>Opportunity to collaborate with and learn from a tightly integrated, best-in-class team&nbsp;</li><li>Flexible work schedules</li><li><strong>Remote Engineering team</strong> designed to effectively collaborate regardless of time zone or location</li><li><strong>Remote Company</strong> that offers inclusive community programs and learning and development opportunities</li></ul><p></p><span>Apply now</span></div>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
