json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,39 +1,47 @@
 {
  "items": [
   {
-    "id": "5WuOG8iQSPCQ4lLyHoBX7A",
-    "url": "https://jobmote.com/job/100061/digital-a11y-expert-us-based-remote-freelance/",
-    "title": "Digital A11y Expert (US-based, remote, freelance)",
+    "id": "MaVQ6qtPTAe-aq4FT0AEdQ",
+    "url": "https://stackoverflow.com/jobs/316694/senior-ios-developer-eyeo-gmbh?a=1IcYISvULpVC&so_medium=Talent&so_source=TalentApi",
+    "title": "Senior iOS Developer at eyeo GmbH (Cologne, Germany) ",
     "tags": [
-      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
-      "DBG:surround``5N( cultur, 2N(remot, OR(work,worker)) )",
-      "DBG_TECH1:k/t/w:android/java/2",
-      "DBG_TECH1:k/t/w:android/mobile/4",
-      "DBG_TECH1:k/t/w:css/frontend/3",
-      "DBG_TECH1:k/t/w:ios/apple/6",
-      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG:surround``2N(work,remot) 9W OR(travel,visit)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W OR(germani, unitedkingdom, austria, croatia, hrvatska, denmark, franc, ireland, netherland, spain, sweden, switzerland)",
+      "DBG:surround``OR(you,we,employe,develop,engin,abl,workmat) 2W work 2W from 2W home",
+      "DBG:surround``remot 16W timezon",
+      "DBG_TECH1:k/t/w:backbone.js/frontend/8",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
+      "DBG_TECH1:k/t/w:f#/other/5",
+      "DBG_TECH1:k/t/w:haskell/other/5",
+      "DBG_TECH1:k/t/w:ios/apple/20",
+      "DBG_TECH1:k/t/w:ios/mobile/20",
       "DBG_TECH1:k/t/w:javascript/frontend/1",
       "DBG_TECH1:k/t/w:javascript/nodejs/1",
-      "DBG_TECH1:k/t/w:macos/apple/4",
-      "DBG_TECH1:k/t/w:windows/dotnet/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=10, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=10, java=2, gamedev=0, php=0, embedded=0, frontend=4}",
-      "REMOTE1/50",
+      "DBG_TECH1:k/t/w:macos/apple/10",
+      "DBG_TECH1:k/t/w:objective-c/apple/12",
+      "DBG_TECH1:k/t/w:objective-c/c/8",
+      "DBG_TECH1:k/t/w:objective-c/mobile/32",
+      "DBG_TECH1:k/t/w:rust/other/5",
+      "DBG_TECH1:k/t/w:scala/java/3",
+      "DBG_TECH1:k/t/w:swift/apple/25",
+      "DBG_TECH1:k/t/w:swift/mobile/40",
+      "DBG_TECH1:techWeightMap:{python=0, other=15, dotnet=0, c=8, mobile=92, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=67, java=3, gamedev=0, php=0, embedded=0, frontend=10}",
+      "REMOTE1/100",
       "TECH1/apple",
-      "TECH1/dotnet",
       "TECH1/mobile",
       "TITLE1/dev",
-      "TZ/unknown"
+      "TZ/Europe"
     ],
     "tagsNames1": [
-      "50% remote"
+      "European time zones"
     ],
     "tagsNames2": [
       "apple",
-      "dotnet",
       "mobile"
     ],
     "hiringOrganization": {
-      "name": "Applause",
+      "name": "eyeo GmbH",
       "sameAs": "UNSET"
     },
     "salary": {
@@ -47,10 +55,10 @@
       "formatted": ""
     },
     "employmentType": "UNSET",
-    "published": "Nov 9, 2019 8:07:48 PM",
-    "validThrough": "Nov 12, 2019 8:07:48 PM",
-    "crawled": "Nov 10, 2019 2:06:29 AM",
-    "content": "<div><p><strong>Summary</strong></p><p>Are you passionate about ensuring websites and applications are readily accessible to end-users utilizing assistive technologies? Are you deeply knowledgeable about the guidelines defined by 2.1, Section 508 and other accessibility standards? If you're a strong communicator with a capacity to lead or train others on accessibility including Developers, QA Engineers and existing Community Accessibility Auditors this might be the perfect role for you!</p><p><br></p><p>For immediate consideration, please complete the this survey:</p><p><strong></strong></p><p><br></p><p><strong>Responsibilities</strong></p><ul><li>Apply accessibility knowledge to a wide range of the client digital properties including but not limited to responsive websites, mobile applications, hybrids and digital documents.</li><li>Bring a depth of development and technical knowledge that complements and strengthens an already dynamic, seasoned group of accessibility professionals</li><li>Mentor, coach and oversee the work of the existing accessibility auditors team</li><li>Meet client engineering staff to understand requirements, deliverables and timelines</li><li>Attend relevant stand-ups and status meetings</li><li>Take responsibility for audits including scoping, planning, budgeting, staffing, execution to final reporting and delivery to the client.</li><li>Prepare design reviews and VPATs</li><li>Support sales to promote accessibility in sales meetings</li><li>Provide training for clients on various technical levels</li></ul><p><br></p><p><strong>Qualifications</strong></p><ul><li>Bachelor's degree in Computer Science, Engineering or other technical field</li><li>3+ years experience in Software Development, QA Engineering and/or performing Accessibility Audits</li><li>Extensive experience using all common screen readers (JAWS, NVDA, mac/iOS VoiceOver, TalkBack) and other assistive technology</li><li>Extensive knowledge of accessibility standards: WCAG 2.0/2.1, ADA Section 508</li><li>Extensive knowledge of WAI-ARIA and accepted accessibility patterns and best practices</li><li>Good knowledge of HTML, CSS, and JavaScript</li><li>Ability to take on an end-user perspective</li><li>Ability to analyze code and employ problem-solving skills to recommend the best solution</li><li>Ability to train, coach colleagues and clients on various accessibility topics</li><li>Ability to communicate to a wide range of project stakeholders (e. g. Executives, Managers, Designers, Developers, etc)</li><li>Knowledge of mobile accessibility best practices on Android and iOS</li><li>Availability of relevant platforms/devices, i.e. Windows, Mac, Android and iOS</li><li>Knowledge of Jira, Slack and other cooperation tools</li><li>Ability to work in remote/cross-language/cross-cultural teams</li></ul></div>",
+    "published": "Nov 15, 2019 12:06:31 PM",
+    "validThrough": "Nov 22, 2019 12:06:31 PM",
+    "crawled": "Nov 15, 2019 12:06:32 PM",
+    "content": "<h3><span>Senior iOS Developer</span>                </h3>                    <h4>About this job</h4>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Mid-Level, Senior, Lead</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Mobile, Product Development, Web Development</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>51–200 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: eyeo GmbH | Cologne, Germany<br></div>                    <h4>Remote details</h4>                    <div>                        <div>                                                            <div>                                    <span>Preferred Timezone:</span>                                    <span>(GMT+01:00) Berlin +/- 4 hours</span>                                </div>                                                            <div>                                    <span>Office Location:</span>                                    <span>Cologne, Germany.</span>                                        <span>Employees can also work full time from this office.</span>                                </div>                                                            <div>                                    <span>Visa Sponsorship:</span>                                    <span>Yes</span>                                </div>                                                            <div>                                    <span>Relocation Assistance:</span>                                    <span>Yes</span>                                </div>                        </div>                    </div>                <h4>Technologies</h4><div></div><div>ios</div><div>swift</div><div>objective-c</div><div>rx-swift</div>                <h4>Job description</h4>                <div><p><strong>Get to know us</strong></p><p>We create open-source software that puts users in control over their online browsing experience. Our desktop and mobile products, such as Adblock Plus (ABP), Adblock Browser and Flattr, help sustain and grow a fair, open web because they give users control while providing user-friendly monetization. Our most popular product, Adblock Plus (ABP), is currently used on over 100 million devices.</p><p><strong>Here’s the big picture</strong></p><p>Work on ABP iOS and macOS development, focusing on lower-level tasks. You will be working on complex issues, both on mobile and on browser development. Not to brag or anything, but look at how many projects you can work on, and everything is open source:</p><ul><li>ABP for Safari on iOS</li><li>Adblock Browser for iOS</li><li>ABP for Safari on macOS</li><li>ABPKit (framework), the backbone of our products and the foundation for our partner products</li></ul><p><strong>After your morning coffee, you’ll be expected to do...</strong></p><ul><li>iOS (80% focus) and some macOS development using Objective-C, Swift, RxSwift</li><li>Core development of libraries, backend, server-side software</li><li>Development of iOS and macOS apps</li><li>Development of new products</li></ul><p>and the rest...</p><ul><li>Consulting with partners</li><li>Maintaining existing products</li><li>Strengthening the underlying technology and backend of our mobile core products</li><li>Working on core content blocking functionality</li><li>Finding innovative solutions in a very limited content blocking environment</li></ul><p><strong>We trust you to work from home if you have...</strong></p><ul><li>Multiple years of iOS, Swift, and Objective-C development</li><li>Advanced programming experience equivalent to programming with RxSwift for significant application services</li><li>Knowledge of algorithms and data structures (at computer science 4-year level)</li><li>Debugging skills (multithreading, concurrency, memory lifetimes, parallelization)</li><li>Expertise with HTTP protocols, database operations (SQL/NoSQL), and functional programming (e.g. Haskell, Scala, F#, Rust, Swift, JavaScript)</li><li>Experience in interoperability with Swift and Objective-C</li><li>Ability to write accurate, concise, and complete technical documentation</li></ul><p><strong>You can do this job in your sleep if you also have experience in...</strong></p><ul><li>Browser development</li><li>Content blocking</li><li>Working in agile teams</li><li>Open source development</li></ul><p><strong>A little bit about the team you’ll work with</strong></p><p>The iOS/macOS team is a globally distributed team that works on multiple projects. Depending on priorities, we decide how we want to work on each level. We have bi-weekly video meetings, but most of the communication happens over IRC, email, and our issue tracking system.</p>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/316694?reset=False&amp;ra=1IcYISvULpVC&amp;oqs=a%3D1IcYISvULpVC%26so_medium%3DTalent%26so_source%3DTalentApi' rel='nofollow'>Apply now</a></div>                    <h4>Benefits</h4>                    <ul>                            <li>                                <span></span>                                <span>Choose Your Own Hardware &amp; Software</span>                            </li>                            <li>                                <span></span>                                <span>Flexible Working Hours (you choose when you start work)</span>                            </li>                            <li>                                <span></span>                                <span>Home Office &amp; Remote Work</span>                            </li>                            <li>                                <span></span>                                <span>Subway Ticket (Travel for free in Cologne or Berlin)</span>                            </li>                            <li>                                <span></span>                                <span>Diverse International Team</span>                            </li>                            <li>                                <span></span>                                <span>Games! (foosball, flipper, ping-pong, PS4 &amp; VR-games provided)</span>                            </li>                            <li>                                <span></span>                                <span>Paid Relocation (we support your move to Germany in any way we can)</span>                            </li>                            <li>                                <span></span>                                <span>Free Drinks, Barista Station (make your own cappuccino) &amp; Fruits</span>                            </li>                    </ul>                ",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
