--- a/_data/communitynav.yml
+++ b/_data/communitynav.yml
@@ -29,22 +29,22 @@
   - title: "Office ⇨ Remote"
     tagline: "Remote workers: describe your transition to remote"
     urlbookmark: 'office-to-remote'
-    url: /community/remote-people#office-to-remote
+    url: /community/remote-people/office-to-remote
 
   - title: "Jobsearch"
     tagline: "Remote workers: Describe your remote jobsearch"
-    urlbookmark: 'jobsearch'
-    url: /community/remote-people#jobsearch
+    #urlbookmark: 'jobsearch'
+    url: /community/remote-people/jobsearch
 
   - title: "Interview"
     tagline: "Describe your remote interview experience"
-    urlbookmark: 'interview'
-    url: /community/remote-people#interview
+    #urlbookmark: 'interview'
+    url: /community/remote-people/interview
 
   - title: "Daily life"
     tagline: "As a remote worker"
-    urlbookmark: 'daily-life'
-    url: /community/remote-people#daily-life
+    #urlbookmark: 'daily-life'
+    url: /community/remote-people/daily-life
 
 #  - title: "You remote Office/Workplace"
 #    tagline: "Describe your remote office"
@@ -54,13 +54,13 @@
 
   - title: "Taxes"
     tagline: "Paying taxes when working remotely"
-    urlbookmark: 'taxes'
-    url: /community/remote-people#taxes
+    #urlbookmark: 'taxes'
+    url: /community/remote-people/taxes
 
   - title: "Dark side"
     tagline: The dark and ugly side of remote work
-    urlbookmark: 'dark-and-ugly-side'
-    url: /community/remote-people#dark-and-ugly-side
+    #urlbookmark: 'dark-side-of-remote-work'
+    url: /community/remote-people/dark-side-of-remote-work
 
 
 - title: Stories from Remote Companies
@@ -74,57 +74,54 @@
 
     - title: "Company introduction"
       tagline: Is your company remote? Distributed? Something else?
-      urlbookmark: 'introduction'
-      url: /community/remote-companies#introduction
+      #urlbookmark: 'introduction'
+      url: /community/remote-companies/introduction
       subnodes:
 
     - title: "Hiring"
       tagline: Everything about hiring in remote companies
-      urlbookmark: 'hiring'
-      url: /community/remote-companies#hiring
+      #urlbookmark: 'hiring'
+      url: /community/remote-companies/hiring
 
     - title: "Hiring process"
       tagline: "Hiring in remote companies: tips and tricks"
-      urlbookmark: 'hiring-process'
-      url: /community/remote-companies#hiring-process
+      #urlbookmark: 'hiring'
+      url: /community/remote-companies/hiring
 
     - title: "The candidates"
       tagline: What companies expect from candidates. Where/how to find candidates
-      urlbookmark: 'candidates'
-      url: /community/remote-companies#candidates
+      #urlbookmark: 'candidates'
+      url: /community/remote-companies/candidates
 
-    - title: "Interview"
+    - title: "Interviewing"
       tagline: From the company/interviewer point of view
-      urlbookmark: 'interview'
-      url: /community/remote-companies#interview
+      #urlbookmark: 'interview'
+      url: /community/remote-companies/interview
 
-    - title: "Hackerrank/Leetcode and co."
-      tagline: What companies think about these platforms
-      urlbookmark: 'hackerrank-leetcode'
-      url: /community/remote-companies#hackerrank-leetcode
-      #- title: Onboarding
-      #  tagline:
-      #  subnodes:
+    - title: "Code Interview Platforms"
+      tagline: '...for Screening & Recruiting Programmers. What companies think about them'
+      #urlbookmark: 'code-interview-platforms'
+      url: /community/remote-companies/code-interview-platforms
 
     - title: "Tools"
-      tagline: "Zoom and other instruments we use in daily work."
-      urlbookmark: 'tools'
-      url: /community/remote-companies#tools
+      tagline: "Zoom and other instruments companies use in daily work."
+      #urlbookmark: 'tools'
+      url: /community/remote-companies/tools
 
     - title: "Management"
       tagline: "Everything about management in remote companies"
-      urlbookmark: 'management'
-      url: /community/remote-companies#management
+      #urlbookmark: 'management'
+      url: /community/remote-companies/management
 
-    - title: "Management and Productivity"
+    - title: "Productivity"
       tagline: "How to measure/improve productivity of a remote team"
-      urlbookmark: 'productivity'
-      url: /community/remote-companies#productivity
+      #urlbookmark: 'productivity'
+      url: /community/remote-companies/productivity
 
     - title: "Retreats/Conferences"
       tagline: "Also Teambuilding. How to bring members of remote team together"
-      urlbookmark: 'retreats-conferences'
-      url: /community/remote-companies#retreats-conferences
+      #urlbookmark: 'retreats-conferences'
+      url: /community/remote-companies/retreats-conferences
 
     #- title: Daily Routine
     #  tagline:
